--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,4 +4,7 @@
     height: 80px;
     align-items: center;
     padding: 0 40px 0 20px;
+    position: sticky;
+    background-color: white;
+    top: 0;
 }
