--- a/src/blocks/image-carousel/__button/image-carousel__button.css
+++ b/src/blocks/image-carousel/__button/image-carousel__button.css
@@ -1,4 +1,5 @@
 .image-carousel__button {
+    /* background-image: url(../../../../public/images/round.svg); */
     height: 24px;
     width: 24px;
     border-radius: 50%;
@@ -7,4 +8,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
