--- a/src/blocks/slide/slide.css
+++ b/src/blocks/slide/slide.css
@@ -1,6 +1,7 @@
 .slide {
     display: flex;
     max-width: 1212px;
+    max-height: 600px;
     background-color: white;
     opacity: 0;
     transition: 1s;
