--- a/src/blocks/team-member/team-member.css
+++ b/src/blocks/team-member/team-member.css
@@ -1,5 +1,5 @@
-.header__left-container {
+.team-member {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    width: 100%;
 }
