--- a/src/blocks/image-carousel/__button/image-carousel__button.css
+++ b/src/blocks/image-carousel/__button/image-carousel__button.css
@@ -1,7 +1,7 @@
 .image-carousel__button {
-    /* background-image: url(../../../../public/images/round.svg); */
     height: 24px;
-    width: 24px;
+    max-width: 24px;
+    width: 100%;
     border-radius: 50%;
     background: #1c383c;
     color: white;
