--- a/src/index.css
+++ b/src/index.css
@@ -126,3 +126,13 @@
 @import url(./blocks/footer-section/__item/_type/footer-section__item_type_place.css);
 @import url(./blocks/footer-section/__social-icon/footer-section__social-icon.css);
 @import url(./blocks/footer-section/__item/_type/footer-section__item_type_link.css);
+
+@import url(./blocks/contact-form/contact-form.css);
+@import url(./blocks/contact-form/__container/contact-form__container.css);
+@import url(./blocks/contact-form/__close-button/contact-form__close-button.css);
+@import url(./blocks/contact-form/__title/contact-form__title.css);
+
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__label/form__label.css);
+@import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__submit/form__submit.css);
