--- a/src/blocks/footer/__bottom/footer__bottom.css
+++ b/src/blocks/footer/__bottom/footer__bottom.css
@@ -1,3 +1,8 @@
 .footer__bottom {
     display: flex;
+    padding: 0 0 60px 80px;
+    gap: 40px;
+    font-size: 14px;
+    line-height: 17px;
+    color: #ffffff;
 }
