--- a/src/blocks/footer/__top/footer__top.css
+++ b/src/blocks/footer/__top/footer__top.css
@@ -1,6 +1,5 @@
 .footer__top {
     display: flex;
-    justify-content: space-around
-
-
+    justify-content: space-between;
+    padding: 0 80px 0 80px;
 }
