--- a/src/blocks/header/__right-container/header__right-container.css
+++ b/src/blocks/header/__right-container/header__right-container.css
@@ -4,3 +4,16 @@
     justify-content: end;
     min-width: 725px;
 }
+
+@media screen and (max-width: 1060px) {
+    .header__right-container {
+        min-width: 644px;
+        margin-left: 20px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .header__right-container {
+        min-width: unset;
+    }
+}
