--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -9,3 +9,10 @@
     top: 0;
     z-index: 1000;
 }
+
+
+@media screen and (max-width: 1060px) {
+    .header {
+        padding: 0 20px 0 20px;
+    }
+}
