--- a/src/blocks/nav/__links/nav__links.css
+++ b/src/blocks/nav/__links/nav__links.css
@@ -6,3 +6,10 @@
     margin-right: 40px;
     line-height: 17px;
 }
+
+@media screen and (max-width: 1060px) {
+    .nav__links {
+        gap: 20px;
+        margin-right: 20px;
+    }
+}
