--- a/src/blocks/hero/__interactive-container/hero__interactive-container.css
+++ b/src/blocks/hero/__interactive-container/hero__interactive-container.css
@@ -2,6 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-
     margin-top: 85px;
+}
+
+@media screen and (max-width: 960px) {
+    .hero__interactive-container {
+        margin-top: 80px;
+        flex-direction: column;
+        align-items: center;
+    }
 }
