--- a/src/blocks/hero/__title/hero__title.css
+++ b/src/blocks/hero/__title/hero__title.css
@@ -6,3 +6,10 @@
     line-height: 48px;
     margin: 0;
 }
+
+@media screen and (max-width: 960px) {
+    .hero__title {
+        text-align: center;
+        font-size: 42px;
+    }
+}
