--- a/src/blocks/image-comparison/__slider-handle/image-comparison__slider-handle.css
+++ b/src/blocks/image-comparison/__slider-handle/image-comparison__slider-handle.css
@@ -7,4 +7,5 @@
     width: 28px;
     font-size: 16px;
     text-align: center;
+    background-image: url(../../../../public/images/slider-handle.svg);
 }
