--- a/src/blocks/image-comparison/image-comparison.css
+++ b/src/blocks/image-comparison/image-comparison.css
@@ -1,4 +1,12 @@
 .image-comparison {
-    height: 399px;
-    width: 626px;
+    max-height: 399px;
+    max-width: 626px;
+}
+
+@media screen and (max-width: 768px) {
+    .image-comparison {
+        max-height: 287px;
+        max-width: 399px;
+        margin-bottom: 60px;
+    }
 }
