--- a/src/blocks/problem/__image-grid/problem__image-grid.css
+++ b/src/blocks/problem/__image-grid/problem__image-grid.css
@@ -1,8 +1,24 @@
 .problem__image-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-
-
+    grid-template-columns: minmax(215px, 345px) minmax(215px, 345px) minmax(
+            215px,
+            345px
+        );
+    justify-content: center;
     gap: 60px;
-    
+    padding: 0;
+    margin: 0 0 120px 0;
+    list-style: none;
+}
+
+@media screen and (max-width: 1250px) {
+    .problem__image-grid {
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .problem__image-grid {
+        margin: 0 0 80px 0;
+    }
 }
