--- a/src/blocks/problem/__stats-info-description/problem__stats-info-description.css
+++ b/src/blocks/problem/__stats-info-description/problem__stats-info-description.css
@@ -7,3 +7,9 @@
     font-weight: 400;
     margin-top: 40px;
 }
+
+@media screen and (max-width: 768px) {
+    .problem__stats-info-description {
+        text-align: center;
+    }
+}
