--- a/src/blocks/problem/__stats-info/problem__stats-info.css
+++ b/src/blocks/problem/__stats-info/problem__stats-info.css
@@ -5,3 +5,9 @@
     justify-content: center;
     margin-left: 78px;
 }
+
+@media screen and (max-width: 768px) {
+    .problem__stats-info {
+        margin: 0 0 40px 0;
+    }
+}
