--- a/src/blocks/problem/__stats/problem__stats.css
+++ b/src/blocks/problem/__stats/problem__stats.css
@@ -1,5 +1,12 @@
 .problem__stats {
-    margin: 120px 0 80px 0;
+    margin: 120px auto 80px auto;
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+    .problem__stats {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 }
