--- a/src/blocks/problem/problem.css
+++ b/src/blocks/problem/problem.css
@@ -2,5 +2,11 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(28, 56, 60, 1);
-    padding: 0 140px 120px 140px;
+    /* padding: 0 140px 120px 140px; */
+}
+
+@media screen and (max-width: 1154px) {
+    .problem {
+        padding: 0 20px 0 20px;
+    }
 }
