--- a/src/blocks/hero/hero.css
+++ b/src/blocks/hero/hero.css
@@ -1,6 +1,8 @@
 .hero {
     padding: 0 40px 0 40px;
     margin: 74px auto 120px auto;
+    max-width: 1440px;
+
 }
 
 @media screen and (max-width: 1154px) {
