--- a/src/blocks/chat/chat.css
+++ b/src/blocks/chat/chat.css
@@ -10,6 +10,17 @@
 
 @media screen and (max-width: 960px) {
     .chat {
-        margin-top: 70px;
+        margin-top: 100px;
+        margin-left: unset;
+
+    }
+}
+
+
+
+@media screen and (max-width: 580px) {
+    .chat {
+        margin-top: unset;
+
     }
 }
