--- a/src/blocks/contact-button/_type/contact-button_type_header.css
+++ b/src/blocks/contact-button/_type/contact-button_type_header.css
@@ -4,3 +4,9 @@
     font-size: 14px;
     line-height: 17px;
 }
+
+@media screen and (max-width: 580px) {
+    .contact-button_type_header {
+        display: none;
+    }
+}
