--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,6 +1,8 @@
 .form__input {
     display: flex;
+    overflow: hidden;
     border: 1px solid #1c383c;
+    padding: 20px;
     box-sizing: border-box;
     border-radius: 3px;
     outline: none;
@@ -9,14 +11,16 @@
     -moz-box-shadow: none;
     box-shadow: none;
     font-size: 0.875rem;
-    line-height: 1.2;
+    line-height: 20px;
     max-width: 600px;
     width: 100%;
     max-height: 60px;
     margin-top: 11px;
-    font-size: 30px;
+    font-size: 18px;
+    color: #1c383c;
 }
 
 .form__input:last-of-type {
-    height: 180px;
+    max-height: 160px;
+    resize: none;
 }
