--- a/src/blocks/header/__left-container/header__left-container.css
+++ b/src/blocks/header/__left-container/header__left-container.css
@@ -4,3 +4,12 @@
     width: 100%;
     min-width: 297px;
 }
+
+
+@media screen and (max-width: 580px) {
+    .header__left-container {
+        min-width: unset;
+
+
+    }
+}
