--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -5,3 +5,10 @@
     font-weight: 700;
     min-width: 200px;
 }
+
+@media screen and (max-width: 580px) {
+    .header__title {
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
