--- a/src/blocks/hero/__interactive-container/hero__interactive-container.css
+++ b/src/blocks/hero/__interactive-container/hero__interactive-container.css
@@ -12,3 +12,13 @@
         align-items: center;
     }
 }
+
+
+
+
+@media screen and (max-width: 580px) {
+    .hero__interactive-container {
+        margin-top: 40px;
+
+    }
+}
