--- a/src/blocks/hero/__title/hero__title.css
+++ b/src/blocks/hero/__title/hero__title.css
@@ -13,3 +13,10 @@
         font-size: 42px;
     }
 }
+
+
+@media screen and (max-width: 580px) {
+    .hero__title {
+        font-size: 28px;
+        line-height: 34px;    }
+}
