--- a/src/blocks/image-carousel/image-carousel.css
+++ b/src/blocks/image-carousel/image-carousel.css
@@ -3,8 +3,5 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-}
-
-.image-carusel__image {
-    
+    position: relative;
 }
