--- a/src/blocks/slide/__points-title/slide__points-title.css
+++ b/src/blocks/slide/__points-title/slide__points-title.css
@@ -5,3 +5,9 @@
     margin: 40px 0 16px 0;
     color: #1c383c;
 }
+
+@media screen and (max-width: 768px) {
+    .slide__points-title {
+        margin: 24px 0 16px 0;
+    }
+}
