--- a/src/blocks/impact/__points-container/impact__points-container.css
+++ b/src/blocks/impact/__points-container/impact__points-container.css
@@ -3,5 +3,12 @@
     max-width: 1360px;
     justify-content: space-between;
     gap: 40px;
-    margin-top: 60px;
+    margin: 120px 20px 0 20px;
+}
+
+@media screen and (max-width: 680px) {
+    .impact__points-container {
+        flex-direction: column;
+        gap: 120px;
+    }
 }
