--- a/src/blocks/impact/impact.css
+++ b/src/blocks/impact/impact.css
@@ -6,3 +6,9 @@
     padding-top: 120px;
     padding-bottom: 120px;
 }
+
+@media screen and (max-width: 768px) {
+    .impact {
+        padding: 60px 0 80px 0;
+    }
+}
