--- a/src/blocks/partners/partners.css
+++ b/src/blocks/partners/partners.css
@@ -4,3 +4,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+
+@media screen and (max-width: 768px) {
+    .partners {
+        margin: 60px 0 60px 0;
+    }
+}
