--- a/src/blocks/points-box/points-box.css
+++ b/src/blocks/points-box/points-box.css
@@ -1,10 +1,10 @@
 .points-box {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 596px;
     background: #ffffff;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    padding: 40px 32px 60px 32px;
+    border-radius: 3px;
 }
