--- a/src/blocks/pricing/__bottom-title/pricing__bottom-title.css
+++ b/src/blocks/pricing/__bottom-title/pricing__bottom-title.css
@@ -7,3 +7,11 @@
     margin: 0 0 92px 0;
     max-width: 780px;
 }
+
+
+@media screen and (max-width: 667px) {
+    .pricing__bottom-title{
+        font-size: 28px;
+        line-height: 32px;
+    }
+}
