--- a/src/blocks/problem/__image-grid/problem__image-grid.css
+++ b/src/blocks/problem/__image-grid/problem__image-grid.css
@@ -20,7 +20,7 @@
 @media screen and (max-width: 768px) {
     .problem__image-grid {
         grid-template-columns: minmax(229px, 345px);
-        gap: 0 20px;
-
+        gap: 40px 20px;
+        margin: 0 0 60px 0;
     }
 }
