--- a/src/blocks/problem/__stats-info-title/problem__stats-info-title.css
+++ b/src/blocks/problem/__stats-info-title/problem__stats-info-title.css
@@ -13,3 +13,10 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 580px) {
+    .problem__stats-info-title {
+        font-size: 28px;
+        line-height: 32px;
+    }
+}
