--- a/src/blocks/solution/__ilustrations/soulution__ilustrations.css
+++ b/src/blocks/solution/__ilustrations/soulution__ilustrations.css
@@ -4,3 +4,9 @@
     max-width: 1058px;
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .soulution__ilustrations {
+        margin: 120px;
+    }
+}
