--- a/src/blocks/solution/solution.css
+++ b/src/blocks/solution/solution.css
@@ -5,3 +5,16 @@
     align-items: center;
     padding: 120px;
 }
+
+@media screen and (max-width: 1310px) {
+    .solution {
+        padding: 120px 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .solution {
+        padding: 60px 20px;
+    }
+}
+
