--- a/src/blocks/team/__container/team__container.css
+++ b/src/blocks/team/__container/team__container.css
@@ -1,5 +1,13 @@
 .team__container {
     display: flex;
-    gap: 154px;
-    margin: 80px 0 0 0;
+    max-width: 800px;
+    width: 100%;
+    justify-content: space-between;
+    margin: 0;
+}
+
+@media screen and (max-width: 667px) {
+    .team__container {
+        flex-direction: column;
+    }
 }
