--- a/src/blocks/team/__title/team__title.css
+++ b/src/blocks/team/__title/team__title.css
@@ -4,5 +4,12 @@
     line-height: 52px;
     text-align: center;
     color: #1c383c;
-    margin: 0;
+    margin: 0 0 80px 0;
+}
+
+@media screen and (max-width: 667px) {
+    .team__title {
+        font-size: 28px;
+        line-height: 32px;
+    }
 }
