--- a/src/blocks/team/team.css
+++ b/src/blocks/team/team.css
@@ -1,6 +1,12 @@
 .team {
-    margin: 240px 0 0 0;
+    margin: 240px 20px 0 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .team {
+        margin: 60px 0 60px 0;
+    }
 }
