--- a/src/blocks/solution/__ilustrations/soulution__ilustrations.css
+++ b/src/blocks/solution/__ilustrations/soulution__ilustrations.css
@@ -7,6 +7,6 @@
 
 @media screen and (max-width: 768px) {
     .soulution__ilustrations {
-        margin: 120px;
+        margin: 120px 120px 0 120px;
     }
 }
