--- a/src/blocks/table/table.css
+++ b/src/blocks/table/table.css
@@ -1,2 +1,12 @@
 .table {
+    background-color: white;
+    display: flex;
+    max-height: 856px;
+    max-width: 1200px;
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 3px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
