--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,19 @@
 @import url(./blocks/impact/__title/impact__title.css);
 @import url(./blocks/impact/__points-container/impact__points-container.css);
 
+@import url(./blocks/competition/competition.css);
+@import url(./blocks/competition/__title/competition__title.css);
+@import url(./blocks/competition/__table-container/competition__table-container.css);
+
+@import url(./blocks/table/table.css);
+@import url(./blocks/table/__row/table__row.css);
+@import url(./blocks/table/__header/table__header.css);
+@import url(./blocks/table/__header-cell/table__header-cell.css);
+@import url(./blocks/table/__cell/table__cell.css);
+@import url(./blocks/table/__cell-point/table__cell-point.css);
+@import url(./blocks/table/__cell-point/_type/table__cell-point_type_orange.css);
+
+
 @import url(./blocks/points-box/points-box.css);
 @import url(./blocks/points-box/__container/points-box_container.css);
 @import url(./blocks/points-box/__title/points-box__title.css);
