--- a/src/blocks/pricing/__top-title/pricing__top-title.css
+++ b/src/blocks/pricing/__top-title/pricing__top-title.css
@@ -6,3 +6,10 @@
     margin: 0;
     color: #1c383c;
 }
+
+@media screen and (max-width: 520px) {
+    .pricing__top-title {
+        font-size: 28px;
+        line-height: 33px;
+    }
+}
