--- a/src/blocks/solution/__icon-container/solution__icon-container.css
+++ b/src/blocks/solution/__icon-container/solution__icon-container.css
@@ -5,3 +5,14 @@
     align-content: flex-start;
     margin-top: 55px;
 }
+
+
+
+@media screen and (max-width: 520px) {
+    .solution__icon-container {
+        flex-wrap: unset;
+
+    }
+}
+
+
