--- a/src/blocks/chat/chat.css
+++ b/src/blocks/chat/chat.css
@@ -3,7 +3,7 @@
     height: 389px;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-left: 60px;
     flex-direction: column;
 }
