--- a/src/blocks/footer-section/__container/footer-section__place-container.css
+++ b/src/blocks/footer-section/__container/footer-section__place-container.css
@@ -1,4 +1,5 @@
-.footer-section__place-container{
+.footer-section__place-container {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 }
