--- a/src/blocks/footer-section/__item/footer-section__item.css
+++ b/src/blocks/footer-section/__item/footer-section__item.css
@@ -4,3 +4,11 @@
     line-height: 21px;
     color: #ffffff;
 }
+
+@media screen and (max-width: 520px) {
+    .footer-section__item {
+        font-size: 18px;
+        line-height: 21px;
+        margin: 0 0 20px 0;
+    }
+}
