--- a/src/blocks/footer-section/__title/footer-section__title.css
+++ b/src/blocks/footer-section/__title/footer-section__title.css
@@ -3,4 +3,15 @@
     font-size: 44px;
     line-height: 52px;
     color: #ffffff;
+    margin: 0 0 42px 0;
+}
+
+
+@media screen and (max-width: 520px) {
+    .footer-section__title {
+        font-size: 28px;
+        line-height: 33px;
+        margin: 0 0 30px 0;
+
+    }
 }
