--- a/src/blocks/footer/__bottom/footer__bottom.css
+++ b/src/blocks/footer/__bottom/footer__bottom.css
@@ -1,8 +1,25 @@
 .footer__bottom {
     display: flex;
-    padding: 0 0 60px 80px;
+
     gap: 40px;
     font-size: 14px;
     line-height: 17px;
+    max-width: 1440px;
+    margin: auto;
     color: #ffffff;
+    padding: 0 80px 0 80px;
+}
+
+@media screen and (max-width: 822px) {
+    .footer__bottom {
+        margin-top: 60px;
+        flex-direction: column;
+        gap: unset;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .footer__bottom {
+        padding: 16px;
+    }
 }
