--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,7 +1,5 @@
 .footer {
     background-color: #1c383c;
     padding: 80px 0 60px 0;
-    justify-content: space-around
-
-
+    justify-content: space-around;
 }
