--- a/src/blocks/pricing/__bottom/pricing__bottom.css
+++ b/src/blocks/pricing/__bottom/pricing__bottom.css
@@ -1,2 +1,14 @@
 .pricing__bottom {
+    padding: 0 40px 0 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .pricing__bottom {
+        padding: 0 16px 0 16px;
+        font-size: 18px;
+        line-height: 21px;
+    }
 }
