--- a/src/blocks/pricing/__top-description/pricing__top-description.css
+++ b/src/blocks/pricing/__top-description/pricing__top-description.css
@@ -7,3 +7,9 @@
     margin-top: 40px;
     margin-bottom: 240px;
 }
+
+@media screen and (max-width: 768px) {
+    .pricing__top-description {
+        margin-bottom: 120px;
+    }
+}
