--- a/src/blocks/pricing/__top-image/pricing__top-image.css
+++ b/src/blocks/pricing/__top-image/pricing__top-image.css
@@ -2,3 +2,11 @@
     max-width: 305.84;
     max-height: 281.81px;
 }
+
+@media screen and (max-width: 520px) {
+    .pricing__top-image {
+        max-width: 173px;
+        max-height: 281.81px;
+        margin: 0 auto;
+    }
+}
