--- a/src/blocks/pricing/__top/pricing__top.css
+++ b/src/blocks/pricing/__top/pricing__top.css
@@ -1,3 +1,10 @@
 .pricing__top {
     display: flex;
+    padding: 0 40px 0 40px;
+}
+
+@media screen and (max-width: 768px) {
+    .pricing__top {
+        flex-direction: column-reverse;
+    }
 }
