--- a/src/blocks/workplan/__ilustration-container/workplan__ilustration-container.css
+++ b/src/blocks/workplan/__ilustration-container/workplan__ilustration-container.css
@@ -5,10 +5,13 @@
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+    margin-bottom: 80px;
 }
 
 @media screen and (max-width: 920px) {
     .workplan__ilustration-container {
         position: unset;
+        margin-bottom: 0;
+        
     }
 }
