--- a/src/blocks/workplan/__ilustrations-container/workplan__ilustrations-container.css
+++ b/src/blocks/workplan/__ilustrations-container/workplan__ilustrations-container.css
@@ -15,5 +15,6 @@
     .workplan__ilustrations-container {
         flex-direction: column;
         height: fit-content;
+        margin-bottom: 60px;
     }
 }
