--- a/src/blocks/workplan/workplan.css
+++ b/src/blocks/workplan/workplan.css
@@ -2,3 +2,11 @@
     max-width: 1440px;
     margin: 80px auto 100px auto;
 }
+
+
+@media screen and (max-width: 920px) {
+    .workplan {
+        margin: 60px auto 60px auto;
+        
+    }
+}
